# openCVStudy

./: .gitignore  CMakeLists.txt  README.md
ch02/: CMakeLists.txt  main.cpp
ch03/BasicOp/: main.cpp
ch03/InputArrayOp/: main.cpp
ch03/MatOp/: main.cpp
ch03/ScalarOp/: main.cpp
ch04/drawing/: main.cpp
ch04/keyboard/: main.cpp
ch04/mouse/: main.cpp
ch04/trackbar/: main.cpp
ch04/utils/: main.cpp
ch04/video/: main.cpp
ch05/brightness/: main.cpp
ch05/contrast/: main.cpp
ch05/histogram/: main.cpp
ch06/arthmetic/: main.cpp
ch06/logical/: main.cpp
ch07/blurring/: main.cpp
ch07/filter/: main.cpp
ch07/noise/: main.cpp
ch07/sharpen/: main.cpp
ch08/affine/: main.cpp
ch08/perspective/: main.cpp
ch09/edges/: main.cpp
ch09/hough/: main.cpp
ch10/ColorOp/: main.cpp
ch10/backproj/: main.cpp
ch10/coloreq/: main.cpp
ch10/inrange/: main.cpp
ch11/adaptive/: main.cpp
ch11/morphology/: main.cpp
ch11/threshold/: main.cpp
ch12/findcts/: main.cpp
ch12/labeling/: main.cpp
ch12/polygon/: main.cpp
ch13/QRCode/: main.cpp
ch13/cascade/: main.cpp
ch13/hog/: main.cpp
ch13/template/: main.cpp
ch14/corners/: main.cpp
ch14/keypoints/: main.cpp
ch14/matching/: main.cpp
ch14/stitching/: main.cpp
ch15/knndigits/: main.cpp
ch15/svmdigits/: main.cpp
ch15/svmplane/: main.cpp
ch16/dnnmnist/: main.cpp
